SMS verification integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,12 @@ app.jwt.expiration=650000
 # API ENDPOINTS
 api.hello-wolrd=/hello-world
 api.auth.base.url=/auth
+
+
+# SMS provider
+sms.provider.api-url=https://www.sms.ma/mcms/sendsms
+sms.provider.code-expiration-minutes=5
+sms.provider.code-length=6
+sms.provider.login=test
+sms.provider.password=test
+sms.provider.sender=pam
