--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,15 @@ api.auth.base.url=/auth
 sms.provider.api-url=https://www.sms.ma/mcms/sendsms
 sms.provider.code-expiration-minutes=5
 sms.provider.code-length=6
-sms.provider.login=test
-sms.provider.password=test
-sms.provider.sender=pam
+sms.provider.login=pamClient
+sms.provider.password=xA@p34g6h45g
+sms.provider.sender=0689063923
+
+curl=-X POST \
+  'https://www.sms.ma/mcms/sendsms' \
+  -H 'Content-Type: application/x-www-form-urlencoded' \
+  -d 'login=pamClient' \
+  -d 'password=xA@p34g6h45g' \
+  -d 'oadc=pamClient' \
+  -d 'msisdn_to=0689063923' \
+  -d 'body=Test pam message'
