--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+        <!-- Remove any existing Apache HttpClient dependencies first -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
