Change project name and base api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=dev
 server.port=8080
-spring.application.name=base
-server.servlet.context-path=/api/warya
+spring.application.name=adhesion
+server.servlet.context-path=/api/adhesion
 
 # PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/waryabase
