Update payment flow

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,19 +1,12 @@
 spring.profiles.active=dev
-server.port=8080
+server.port=8082
 spring.application.name=adhesion
 server.servlet.context-path=/api/adhesion
-
-# PostgreSQL Database Configuration
-#spring.datasource.url=jdbc:postgresql://localhost:5432/waryabase
-#spring.datasource.username=postgres
-#spring.datasource.password=1234
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # MySql Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/adhesion
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=6fbH+3A4B86n
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
